fix(ui): layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,30 +140,28 @@ blockquote {
 }
 
 .article-header {
-  display: flex;
+  position: relative;
 }
 
 .article-badge {
   background-color: #99e9f2;
+  float: left;
   width: 40px;
   height: 24px;
   line-height: 24px;
+  margin-top: 2px;
   text-align: center;
+}
+
+.article-title {
+  font-size: 1.2rem;
+  padding: 0 0 0 0.4rem;
 }
 
 .article-time {
   color: #15aabf;
   float: right;
-  padding: .2rem 0 0;
-}
-
-.article-title {
-  float: right;
-  font-size: 1.2rem;
-  overflow-x: hidden;
-  padding: 0 0 0 0.4rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  padding: 0.2rem 0 0;
 }
 
 .article-description {
@@ -177,7 +175,15 @@ blockquote {
 
 .article-tag {
   background-color: #0b7285;
+  overflow: hidden;
   padding: 0 4px;
+}
+
+@media screen and (max-width: 640px) {
+  .article-time {
+    float: none;
+    padding: 0 0 0.2rem;
+  }
 }
 
 .stat {
@@ -204,6 +210,7 @@ blockquote {
 }
 
 .stat-data {
+  color: #3bc9db;
   font-size: 1rem;
   margin: 0.8rem 0 0;
 }
